fix: simplify snapshot bounds response
